level011/parser.output
Terminals unused in grammar

    RETURN
    AND
    OR


Grammar

    0 $accept: program $end

    1 program: ε
    2        | program stmt

    3 stmt: IDENT '=' expr ';'
    4     | DEF IDENT '(' param_list ')' '{' stmts '}'
    5     | IDENT '(' arg_list ')' ';'
    6     | IF '(' boolexpr ')' '{' stmts '}'
    7     | IF '(' boolexpr ')' '{' stmts '}' ELSE '{' stmts '}'
    8     | WHILE '(' boolexpr ')' '{' stmts '}'
    9     | expr ';'
   10     | NEWLINE

   11 param_list: IDENT
   12           | param_list ',' IDENT

   13 arg_list: ε
   14         | expr
   15         | arg_list ',' expr

   16 stmts: ε
   17      | stmts stmt

   18 boolexpr: expr '>' expr
   19         | expr '<' expr
   20         | expr GE expr
   21         | expr LE expr
   22         | expr EQ expr
   23         | expr NE expr
   24         | expr

   25 expr: INTEGER
   26     | IDENT
   27     | expr '+' expr
   28     | expr '-' expr
   29     | expr '*' expr
   30     | expr '/' expr
   31     | '(' expr ')'
   32     | '-' expr


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 4 5 6 7 8 31
    ')' (41) 4 5 6 7 8 31
    '*' (42) 29
    '+' (43) 27
    ',' (44) 12 15
    '-' (45) 28 32
    '/' (47) 30
    ';' (59) 3 5 9
    '<' (60) 19
    '=' (61) 3
    '>' (62) 18
    '{' (123) 4 6 7 8
    '}' (125) 4 6 7 8
    error (256)
    INTEGER <ival> (258) 25
    IDENT <sval> (259) 3 4 5 11 12 26
    NEWLINE (260) 10
    IF (261) 6 7
    ELSE (262) 7
    WHILE (263) 8
    DEF (264) 4
    RETURN (265)
    GE (266) 20
    LE (267) 21
    EQ (268) 22
    NE (269) 23
    AND (270)
    OR (271)
    UMINUS (272)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    program (32)
        on left: 1 2
        on right: 0 2
    stmt (33)
        on left: 3 4 5 6 7 8 9 10
        on right: 2 17
    param_list (34)
        on left: 11 12
        on right: 4 12
    arg_list (35)
        on left: 13 14 15
        on right: 5 15
    stmts (36)
        on left: 16 17
        on right: 4 6 7 8 17
    boolexpr <val> (37)
        on left: 18 19 20 21 22 23 24
        on right: 6 7 8
    expr <val> (38)
        on left: 25 26 27 28 29 30 31 32
        on right: 3 9 14 15 18 19 20 21 22 23 24 27 28 29 30 31 32


State 0

    0 $accept: • program $end

    $default  reduce using rule 1 (program)

    program  go to state 1


State 1

    0 $accept: program • $end
    2 program: program • stmt

    $end     shift, and go to state 2
    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 4
    NEWLINE  shift, and go to state 5
    IF       shift, and go to state 6
    WHILE    shift, and go to state 7
    DEF      shift, and go to state 8
    '-'      shift, and go to state 9
    '('      shift, and go to state 10

    stmt  go to state 11
    expr  go to state 12


State 2

    0 $accept: program $end •

    $default  accept


State 3

   25 expr: INTEGER •

    $default  reduce using rule 25 (expr)


State 4

    3 stmt: IDENT • '=' expr ';'
    5     | IDENT • '(' arg_list ')' ';'
   26 expr: IDENT •

    '='  shift, and go to state 13
    '('  shift, and go to state 14

    $default  reduce using rule 26 (expr)


State 5

   10 stmt: NEWLINE •

    $default  reduce using rule 10 (stmt)


State 6

    6 stmt: IF • '(' boolexpr ')' '{' stmts '}'
    7     | IF • '(' boolexpr ')' '{' stmts '}' ELSE '{' stmts '}'

    '('  shift, and go to state 15


State 7

    8 stmt: WHILE • '(' boolexpr ')' '{' stmts '}'

    '('  shift, and go to state 16


State 8

    4 stmt: DEF • IDENT '(' param_list ')' '{' stmts '}'

    IDENT  shift, and go to state 17


State 9

   32 expr: '-' • expr

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 18
    '-'      shift, and go to state 9
    '('      shift, and go to state 10

    expr  go to state 19


State 10

   31 expr: '(' • expr ')'

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 18
    '-'      shift, and go to state 9
    '('      shift, and go to state 10

    expr  go to state 20


State 11

    2 program: program stmt •

    $default  reduce using rule 2 (program)


State 12

    9 stmt: expr • ';'
   27 expr: expr • '+' expr
   28     | expr • '-' expr
   29     | expr • '*' expr
   30     | expr • '/' expr

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24
    ';'  shift, and go to state 25


State 13

    3 stmt: IDENT '=' • expr ';'

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 18
    '-'      shift, and go to state 9
    '('      shift, and go to state 10

    expr  go to state 26


State 14

    5 stmt: IDENT '(' • arg_list ')' ';'

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 18
    '-'      shift, and go to state 9
    '('      shift, and go to state 10

    $default  reduce using rule 13 (arg_list)

    arg_list  go to state 27
    expr      go to state 28


State 15

    6 stmt: IF '(' • boolexpr ')' '{' stmts '}'
    7     | IF '(' • boolexpr ')' '{' stmts '}' ELSE '{' stmts '}'

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 18
    '-'      shift, and go to state 9
    '('      shift, and go to state 10

    boolexpr  go to state 29
    expr      go to state 30


State 16

    8 stmt: WHILE '(' • boolexpr ')' '{' stmts '}'

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 18
    '-'      shift, and go to state 9
    '('      shift, and go to state 10

    boolexpr  go to state 31
    expr      go to state 30


State 17

    4 stmt: DEF IDENT • '(' param_list ')' '{' stmts '}'

    '('  shift, and go to state 32


State 18

   26 expr: IDENT •

    $default  reduce using rule 26 (expr)


State 19

   27 expr: expr • '+' expr
   28     | expr • '-' expr
   29     | expr • '*' expr
   30     | expr • '/' expr
   32     | '-' expr •

    $default  reduce using rule 32 (expr)


State 20

   27 expr: expr • '+' expr
   28     | expr • '-' expr
   29     | expr • '*' expr
   30     | expr • '/' expr
   31     | '(' expr • ')'

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24
    ')'  shift, and go to state 33


State 21

   27 expr: expr '+' • expr

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 18
    '-'      shift, and go to state 9
    '('      shift, and go to state 10

    expr  go to state 34


State 22

   28 expr: expr '-' • expr

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 18
    '-'      shift, and go to state 9
    '('      shift, and go to state 10

    expr  go to state 35


State 23

   29 expr: expr '*' • expr

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 18
    '-'      shift, and go to state 9
    '('      shift, and go to state 10

    expr  go to state 36


State 24

   30 expr: expr '/' • expr

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 18
    '-'      shift, and go to state 9
    '('      shift, and go to state 10

    expr  go to state 37


State 25

    9 stmt: expr ';' •

    $default  reduce using rule 9 (stmt)


State 26

    3 stmt: IDENT '=' expr • ';'
   27 expr: expr • '+' expr
   28     | expr • '-' expr
   29     | expr • '*' expr
   30     | expr • '/' expr

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24
    ';'  shift, and go to state 38


State 27

    5 stmt: IDENT '(' arg_list • ')' ';'
   15 arg_list: arg_list • ',' expr

    ','  shift, and go to state 39
    ')'  shift, and go to state 40


State 28

   14 arg_list: expr •
   27 expr: expr • '+' expr
   28     | expr • '-' expr
   29     | expr • '*' expr
   30     | expr • '/' expr

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 14 (arg_list)


State 29

    6 stmt: IF '(' boolexpr • ')' '{' stmts '}'
    7     | IF '(' boolexpr • ')' '{' stmts '}' ELSE '{' stmts '}'

    ')'  shift, and go to state 41


State 30

   18 boolexpr: expr • '>' expr
   19         | expr • '<' expr
   20         | expr • GE expr
   21         | expr • LE expr
   22         | expr • EQ expr
   23         | expr • NE expr
   24         | expr •
   27 expr: expr • '+' expr
   28     | expr • '-' expr
   29     | expr • '*' expr
   30     | expr • '/' expr

    GE   shift, and go to state 42
    LE   shift, and go to state 43
    EQ   shift, and go to state 44
    NE   shift, and go to state 45
    '>'  shift, and go to state 46
    '<'  shift, and go to state 47
    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 24 (boolexpr)


State 31

    8 stmt: WHILE '(' boolexpr • ')' '{' stmts '}'

    ')'  shift, and go to state 48


State 32

    4 stmt: DEF IDENT '(' • param_list ')' '{' stmts '}'

    IDENT  shift, and go to state 49

    param_list  go to state 50


State 33

   31 expr: '(' expr ')' •

    $default  reduce using rule 31 (expr)


State 34

   27 expr: expr • '+' expr
   27     | expr '+' expr •
   28     | expr • '-' expr
   29     | expr • '*' expr
   30     | expr • '/' expr

    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 27 (expr)


State 35

   27 expr: expr • '+' expr
   28     | expr • '-' expr
   28     | expr '-' expr •
   29     | expr • '*' expr
   30     | expr • '/' expr

    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 28 (expr)


State 36

   27 expr: expr • '+' expr
   28     | expr • '-' expr
   29     | expr • '*' expr
   29     | expr '*' expr •
   30     | expr • '/' expr

    $default  reduce using rule 29 (expr)


State 37

   27 expr: expr • '+' expr
   28     | expr • '-' expr
   29     | expr • '*' expr
   30     | expr • '/' expr
   30     | expr '/' expr •

    $default  reduce using rule 30 (expr)


State 38

    3 stmt: IDENT '=' expr ';' •

    $default  reduce using rule 3 (stmt)


State 39

   15 arg_list: arg_list ',' • expr

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 18
    '-'      shift, and go to state 9
    '('      shift, and go to state 10

    expr  go to state 51


State 40

    5 stmt: IDENT '(' arg_list ')' • ';'

    ';'  shift, and go to state 52


State 41

    6 stmt: IF '(' boolexpr ')' • '{' stmts '}'
    7     | IF '(' boolexpr ')' • '{' stmts '}' ELSE '{' stmts '}'

    '{'  shift, and go to state 53


State 42

   20 boolexpr: expr GE • expr

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 18
    '-'      shift, and go to state 9
    '('      shift, and go to state 10

    expr  go to state 54


State 43

   21 boolexpr: expr LE • expr

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 18
    '-'      shift, and go to state 9
    '('      shift, and go to state 10

    expr  go to state 55


State 44

   22 boolexpr: expr EQ • expr

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 18
    '-'      shift, and go to state 9
    '('      shift, and go to state 10

    expr  go to state 56


State 45

   23 boolexpr: expr NE • expr

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 18
    '-'      shift, and go to state 9
    '('      shift, and go to state 10

    expr  go to state 57


State 46

   18 boolexpr: expr '>' • expr

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 18
    '-'      shift, and go to state 9
    '('      shift, and go to state 10

    expr  go to state 58


State 47

   19 boolexpr: expr '<' • expr

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 18
    '-'      shift, and go to state 9
    '('      shift, and go to state 10

    expr  go to state 59


State 48

    8 stmt: WHILE '(' boolexpr ')' • '{' stmts '}'

    '{'  shift, and go to state 60


State 49

   11 param_list: IDENT •

    $default  reduce using rule 11 (param_list)


State 50

    4 stmt: DEF IDENT '(' param_list • ')' '{' stmts '}'
   12 param_list: param_list • ',' IDENT

    ','  shift, and go to state 61
    ')'  shift, and go to state 62


State 51

   15 arg_list: arg_list ',' expr •
   27 expr: expr • '+' expr
   28     | expr • '-' expr
   29     | expr • '*' expr
   30     | expr • '/' expr

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 15 (arg_list)


State 52

    5 stmt: IDENT '(' arg_list ')' ';' •

    $default  reduce using rule 5 (stmt)


State 53

    6 stmt: IF '(' boolexpr ')' '{' • stmts '}'
    7     | IF '(' boolexpr ')' '{' • stmts '}' ELSE '{' stmts '}'

    $default  reduce using rule 16 (stmts)

    stmts  go to state 63


State 54

   20 boolexpr: expr GE expr •
   27 expr: expr • '+' expr
   28     | expr • '-' expr
   29     | expr • '*' expr
   30     | expr • '/' expr

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 20 (boolexpr)


State 55

   21 boolexpr: expr LE expr •
   27 expr: expr • '+' expr
   28     | expr • '-' expr
   29     | expr • '*' expr
   30     | expr • '/' expr

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 21 (boolexpr)


State 56

   22 boolexpr: expr EQ expr •
   27 expr: expr • '+' expr
   28     | expr • '-' expr
   29     | expr • '*' expr
   30     | expr • '/' expr

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 22 (boolexpr)


State 57

   23 boolexpr: expr NE expr •
   27 expr: expr • '+' expr
   28     | expr • '-' expr
   29     | expr • '*' expr
   30     | expr • '/' expr

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 23 (boolexpr)


State 58

   18 boolexpr: expr '>' expr •
   27 expr: expr • '+' expr
   28     | expr • '-' expr
   29     | expr • '*' expr
   30     | expr • '/' expr

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 18 (boolexpr)


State 59

   19 boolexpr: expr '<' expr •
   27 expr: expr • '+' expr
   28     | expr • '-' expr
   29     | expr • '*' expr
   30     | expr • '/' expr

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    '*'  shift, and go to state 23
    '/'  shift, and go to state 24

    $default  reduce using rule 19 (boolexpr)


State 60

    8 stmt: WHILE '(' boolexpr ')' '{' • stmts '}'

    $default  reduce using rule 16 (stmts)

    stmts  go to state 64


State 61

   12 param_list: param_list ',' • IDENT

    IDENT  shift, and go to state 65


State 62

    4 stmt: DEF IDENT '(' param_list ')' • '{' stmts '}'

    '{'  shift, and go to state 66


State 63

    6 stmt: IF '(' boolexpr ')' '{' stmts • '}'
    7     | IF '(' boolexpr ')' '{' stmts • '}' ELSE '{' stmts '}'
   17 stmts: stmts • stmt

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 4
    NEWLINE  shift, and go to state 5
    IF       shift, and go to state 6
    WHILE    shift, and go to state 7
    DEF      shift, and go to state 8
    '-'      shift, and go to state 9
    '('      shift, and go to state 10
    '}'      shift, and go to state 67

    stmt  go to state 68
    expr  go to state 12


State 64

    8 stmt: WHILE '(' boolexpr ')' '{' stmts • '}'
   17 stmts: stmts • stmt

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 4
    NEWLINE  shift, and go to state 5
    IF       shift, and go to state 6
    WHILE    shift, and go to state 7
    DEF      shift, and go to state 8
    '-'      shift, and go to state 9
    '('      shift, and go to state 10
    '}'      shift, and go to state 69

    stmt  go to state 68
    expr  go to state 12


State 65

   12 param_list: param_list ',' IDENT •

    $default  reduce using rule 12 (param_list)


State 66

    4 stmt: DEF IDENT '(' param_list ')' '{' • stmts '}'

    $default  reduce using rule 16 (stmts)

    stmts  go to state 70


State 67

    6 stmt: IF '(' boolexpr ')' '{' stmts '}' •
    7     | IF '(' boolexpr ')' '{' stmts '}' • ELSE '{' stmts '}'

    ELSE  shift, and go to state 71

    $default  reduce using rule 6 (stmt)


State 68

   17 stmts: stmts stmt •

    $default  reduce using rule 17 (stmts)


State 69

    8 stmt: WHILE '(' boolexpr ')' '{' stmts '}' •

    $default  reduce using rule 8 (stmt)


State 70

    4 stmt: DEF IDENT '(' param_list ')' '{' stmts • '}'
   17 stmts: stmts • stmt

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 4
    NEWLINE  shift, and go to state 5
    IF       shift, and go to state 6
    WHILE    shift, and go to state 7
    DEF      shift, and go to state 8
    '-'      shift, and go to state 9
    '('      shift, and go to state 10
    '}'      shift, and go to state 72

    stmt  go to state 68
    expr  go to state 12


State 71

    7 stmt: IF '(' boolexpr ')' '{' stmts '}' ELSE • '{' stmts '}'

    '{'  shift, and go to state 73


State 72

    4 stmt: DEF IDENT '(' param_list ')' '{' stmts '}' •

    $default  reduce using rule 4 (stmt)


State 73

    7 stmt: IF '(' boolexpr ')' '{' stmts '}' ELSE '{' • stmts '}'

    $default  reduce using rule 16 (stmts)

    stmts  go to state 74


State 74

    7 stmt: IF '(' boolexpr ')' '{' stmts '}' ELSE '{' stmts • '}'
   17 stmts: stmts • stmt

    INTEGER  shift, and go to state 3
    IDENT    shift, and go to state 4
    NEWLINE  shift, and go to state 5
    IF       shift, and go to state 6
    WHILE    shift, and go to state 7
    DEF      shift, and go to state 8
    '-'      shift, and go to state 9
    '('      shift, and go to state 10
    '}'      shift, and go to state 75

    stmt  go to state 68
    expr  go to state 12


State 75

    7 stmt: IF '(' boolexpr ')' '{' stmts '}' ELSE '{' stmts '}' •

    $default  reduce using rule 7 (stmt)
